# src/app.js
@@ -23,6 +23,7 @@ import refUnorRoute from "./modules/ref-unor/ref-unor.route.js";
 import refInstansiRoute from "./modules/ref-instansi/ref-instansi.route.js";
 import refJabatanRoute from "./modules/ref-jabatan/ref-jabatan.route.js";
 import pensiunRoute from "./modules/pensiun/pensiun.route.js";
+import importPnsRoute from "./modules/import-pns/import-pns.route.js";
 
 const app = express();
 app.set("trust proxy", 1);
@@ -75,6 +76,8 @@ app.use("/api/ref-unor", refUnorRoute);
 app.use("/api/ref-instansi", refInstansiRoute);
 app.use("/api/ref-jabatan", refJabatanRoute);
 app.use("/api/pensiun", pensiunRoute);
+app.use("/api/import-pns", importPnsRoute);
+
 
 // Swagger API Documentation (Rule 04)
 if (process.env.SWAGGER_ENABLED !== "false") {
